# justinsengineering.com

./: .gitignore  .haml-lint.yml  Cargo.toml  Dioxus.toml  Gemfile  README.md  bun.lockb  config.rb  package.json  wrangler.toml
.github/workflows/: build.yml
assets/: tailwind.css
assets/styling/: main.css
source/: _footer.html.haml  _header.html.haml  _icon.html.haml  index.html.haml
source/layouts/: layout.html.haml
source/stylesheets/: fontawesome.css  site.css
source/webfonts/: FontAwesome6Free.sfd  FontAwesome6FreeTrueType.sfd
src/: main.rs
src/components/: footer.rs  logo.rs  mod.rs  navbar.rs  theme_controller.rs
src/views/: error.rs  index.rs  mod.rs  projects.rs  wrapper.rs
