[package]
name = "JES"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-free-icons = { version = "0.9", features = [
  "font-awesome-brands",
  "lucide",
] }
serde_json = "1.0"
web-sys = { version = "0.3.77", features = [
  "Headers",
  "HtmlDocument",
  "Window",
], optional = true }
web-time = { version = "1.1.0", optional = true }
js-sys = { version = "0.3.77", optional = true }
wasm-theme = { version = "0.1", optional = true }

[features]
default = ["web"]
web = [
  "dioxus/web",
  "dep:web-time",
  "dep:js-sys",
  "dep:web-sys",
  "dep:wasm-theme",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
