[package]
name = "justinsengineering"
version = "0.1.0"
authors = ["JES <code@jes.contact>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-free-icons = { version = "0.9", features = [
  "font-awesome-brands",
  "lucide",
] }
serde_json = "1.0"
web-sys = { version = "0.3.77", features = [
  "Headers",
  "HtmlDocument",
  "Window",
]}
web-time = { version = "1.1.0" }
js-sys = { version = "0.3.77" }
wasm-theme = { version = "0.1" }

[features]
default = ["web"]
web = [
  "dioxus/web"
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
