[package]
name = "justinsengineering"
version = "0.2.2"
authors = ["JES <code@jes.contact>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.10", features = [
  "font-awesome-brands",
  "lucide",
] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
  "Headers",
  "HtmlDocument",
  "Window",
]}
web-time = { version = "1.1" }
js-sys = { version = "0.3" }
wasm-theme = { version = "0.1" }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
